# renos-cms

./: .gitignore  manage.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: django.yml
general/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
general/migrations/: 0001_initial.py  0002_remove_toolcategory_description.py  0003_alter_tool_image.py  0004_linkcategory_importantlinks.py  0005_role_teammember.py  0006_teammember_image.py
renovators/: asgi.py  settings.py  urls.py  wsgi.py
technical_information/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
technical_information/migrations/: 0001_initial.py  0002_syntheticeventtarget_syntheticeventtype_and_more.py
