[project]
name = "renos-cms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "django-cors-headers>=4.7.0",
    "django-storages>=1.14.6",
    "pillow>=11.3.0",
    "python-decouple>=3.8",
]
